# gekko_ml

./: .gitignore  CMakeLists.txt  README.md  todo.txt
.github/workflows/: buildgekko.yml  c-cpp.yml
include/: activations.hpp  conv2d.hpp  data.hpp  initialization.hpp  layers.hpp  lossfunctions.hpp  matrix.hpp  neuralnetwork.hpp  neuron.hpp  optimizer.hpp  tensor_load.hpp  train.hpp
src/: data.cpp  layers.cpp  main.cpp  neuralnetwork.cpp  neuron.cpp  train.cpp
